mac打包兼容jpackage模式，减少安装包容量